--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
   /* Espaciado */
   --space:10px;
   /* Tipografía */
-  --normal:12px;
+  --normal:15px;
   /* Box Shadow */
   --box: 0px 0 2px 1px #e6e5e9;
 }
@@ -47,6 +47,20 @@ nav li a{
 nav li a:hover{
   color:var(--white--color);
 }
+p, label{
+  font-size: var(--normal);
+}
+label{
+  padding-bottom: var(--space);
+}
+button{
+  background-color: var(--green--color);
+  height: 50px;
+  width: 50%;
+  border: 0 solid var(--black--color);
+  border-radius: 5px;
+}
+
 footer{
   background-color: var(--black--color);
   display: flex;
@@ -122,4 +136,32 @@ footer{
 }
 .mencion{
   padding:var(--space);
+}
+
+/* Seccion modulos de pago */
+.modulo_pago{
+  background-color: var(--white--color);
+  box-shadow: var(--box);
+  padding: 10px;
+  text-align: center;
+}
+.imagen_modulo{
+  max-width: 250px;
+  width: 100%;
+  margin:auto;
+}
+.data{
+  margin-top: var(--space);
+  margin-bottom: 5px;
+  width: 100%;
+  height: 35px;
+  border-right: 4px;
+  border: 1px solid var(--black--color);
+  box-sizing: border-box;
+}
+.modulo_pago .main_button{
+  margin-top: 15px;
+}
+.contact a{
+  color:var(--green--color);
 }
